--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -21,8 +21,29 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
+      - name: Get issue file content
+        id: GetIssueFileContent
+        shell: pwsh
+        run: |
+          $issueFileContent = Get-Content -Path tests/IssueBody.md -Raw
+
+          $EOF = -join (1..15 | ForEach {[char]((48..57)+(65..90)+(97..122) | Get-Random)})
+          "issueFileContent<<$EOF" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          $issueFileContent | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+          "$EOF" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
+
+      - uses: PSModule/Debug@v0
+        if: always()
+
       - name: Action-Test
+        id: Action-Test
         uses: ./
         with:
-          working-directory: ./tests
-          subject: PSModule
+          IssueBody: ${{ steps.GetIssueFileContent.outputs.issueFileContent }}
+
+      - name: Action-Test-Results
+        shell: pwsh
+        env:
+          data: ${{ steps.Action-Test.outputs.data }}
+        run: |
+          Invoke-Pester -Path tests
