🩹 [Patch]: Use ConvertFrom-IssueForm in GitHub module (#6)
## Description

This pull request includes several changes aimed at improving script
execution and simplifying the codebase. The most important changes
include adding output visibility to scripts, updating markdown
formatting in the README, and removing redundant filters in the
PowerShell script.

Enhancements to script execution:

*
[`.github/workflows/Action-Test.yml`](diffhunk://#diff-a12ae5c885b0673c0ff6f70c2670886907590d624626e07da4c52e01aeaf56a4R32):
Added `ShowOutput: true` to display script output during the
`GetIssueFileContent` job.
*
[`action.yml`](diffhunk://#diff-1243c5424efaaa19bd8e813c5e6f6da46316e63761421b3e5f5c8ced9a36e6b6R28):
Added `ShowOutput: true` to display script output during the custom
`runs` job.

Documentation improvements:

*
[`README.md`](diffhunk://#diff-b335630551682c19a781afebcf4d07bf978fb1f8ac04c6bf87428ed5106870f5L98-R101):
Corrected the markdown formatting for the list of alternative parsers.

Codebase simplification:

*
[`scripts/main.ps1`](diffhunk://#diff-dc2e5a659836b1b73abb03421c567f5018c2755677c4a0aa764cb26117b68011R1-R17):
Removed the `Remove-MarkdownComments`, `Parse-IssueBody`, and
`Process-IssueBody` filters and replaced them with a call to
`ConvertFrom-IssueForm` for processing issue bodies.
*
[`scripts/main.ps1`](diffhunk://#diff-dc2e5a659836b1b73abb03421c567f5018c2755677c4a0aa764cb26117b68011R1-R17):
Added a `SuppressMessageAttribute` to suppress warnings about unused
parameters in the `IssueBody` variable.

## Type of change

<!-- Use the check-boxes [x] on the options that are relevant. -->

- [ ] 📖 [Docs]
- [ ] 🪲 [Fix]
- [x] 🩹 [Patch]
- [ ] ⚠️ [Security fix]
- [ ] 🚀 [Feature]
- [ ] 🌟 [Breaking change]

## Checklist

<!-- Use the check-boxes [x] on the options that are relevant. -->

- [x] I have performed a self-review of my own code
- [x] I have commented my code, particularly in hard-to-understand areas

--- a/.github/workflows/Action-Test.yml
+++ b/.github/workflows/Action-Test.yml
@@ -29,6 +29,7 @@ jobs:
         id: GetIssueFileContent
         uses: PSModule/GitHub-Script@v1
         with:
+          ShowOutput: true
           Script: . '.\tests\Get-IssueFileContent.ps1'
 
       - name: Action-Test
